--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "url": "git://github.com/pasaran/descript2.git"
     },
     "dependencies": {
+        "cookies": "0.5.1"
     },
     "devDependencies": {
         "mocha": "*",
