--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "url": "git://github.com/pasaran/descript2.git"
     },
     "dependencies": {
-        "cookies": "0.5.1"
+        "cookies": "0.5.1",
+        "memcached": "2.2.1"
     },
     "devDependencies": {
         "mocha": "*",
