--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "files": [
         "lib"
     ],
-    "main": {
-        "lib/index.js"
-    },
+    "main": "lib/index.js",
     "engines": {
         "node": "*"
     }
