--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "devDependencies": {
         "mocha": "*",
         "expect.js": "*",
-        "eslint": "*",
-        "eslint-plugin-nop": "*"
+        "eslint": "2.7.0",
+        "eslint-plugin-nop": "git@github.com:pasaran/eslint-plugin-nop.git"
     },
     "files": [
         "lib"
