--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "cookies": "0.5.1",
+        "decompress-response": "^3.3.0",
         "memcached": "2.2.1"
     },
     "peerDependencies": {
