--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     },
     "name": "descript2",
     "description": "descript2",
-    "version": "0.0.38",
+    "version": "0.0.39",
     "homepage": "https://github.com/pasaran/descript2",
     "repository": {
         "type": "git",
@@ -14,8 +14,7 @@
     },
     "dependencies": {
         "cookies": "0.5.1",
-        "decompress-response": "^3.3.0",
-        "memcached": "2.2.1"
+        "decompress-response": "^3.3.0"
     },
     "peerDependencies": {
         "nommon": ">=0.0.46"
