--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "devDependencies": {
         "mocha": "*",
+        "nommon": ">=0.0.46",
         "expect.js": "*",
         "eslint": "2.7.0",
         "eslint-plugin-nop": "git@github.com:pasaran/eslint-plugin-nop.git"
